@@ -1,4 +1,4 @@
-Copyright (c) 2017 Jeff Michaud
+Copyright (c) 2017-2024 Jeff Michaud
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the "Software"), to deal in
