@@ -10,11 +10,11 @@ class Template:
     cli = []
 
     """ We load the template.json and populate available commands, executables directives and the template version """
-    def __init__(self):
-        self.cfg = config.Config()
+    def __init__(self, name):
+        cfg = config.Config(name)
 
         try:
-            with open(self.cfg.plugin_path + "/template.json", "r") as read_file:
+            with open(cfg.plugin_path + "/template.json", "r") as read_file:
                 data = json.load(read_file)	
 
             self.hcliTemplateVersion = data['hcliTemplateVersion']
